--- a/src/log.html
+++ b/src/log.html
@@ -15,7 +15,7 @@
       td:nth-child(4) { max-width: 8em; }
       td:nth-child(5) { max-width: 8em; }
       td:nth-child(6) { max-width: 14em; }
-      .prime.warning { border: 1px solid #ccc;  font-size: 0.9em; padding: 0.5em;}
+      .prime.warning {  font-size: 0.9em; padding: 0.5em;}
       tbody { counter-reset: n; }
       tbody tr td:first-child::before {
          display: inline-block;
@@ -106,7 +106,6 @@
 
     </div>
 
-  <script src="scripts/const.js"></script>
   <script src="scripts/utils.js"></script>
   <script src="scripts/log.js"></script>
   </body>
