--- a/src/import.html
+++ b/src/import.html
@@ -25,10 +25,14 @@
     <!-- main -->
     <div class="prime">
       <section>
-        <h3>Import Settings from FoxyProxy 6.0+</h3> <i>(current version)</i>
+        <h3>Import Settings from FoxyProxy 6.0+</h3>
 
         <p>FoxyProxy can use <a href="https://support.mozilla.org/products/firefox/sync" target="_blank">Firefox Sync</a> to synchronize settings across different installations of Firefox. But if you don't use Firefox Sync or want to share your settings with friends, <a id="export">export</a> FoxyProxy settings. Then use this page to import those settings. By default, the file is called <i>foxyproxy.json</i>.<br><br>
-        <input id="importJson" type="file" accept=".json"></p>
+        <input type="file" id="importJson" accept=".json">
+        <label for="importJson" class="button" data-i18n="import"></label>
+        
+        
+        </p>
 
       </section>
       <section>
@@ -37,7 +41,9 @@
         <p>If you have upgraded from an older version of FoxyProxy, Firefox has completely changed the addon system since the previous FoxyProxy version. Older FoxyProxy versions used a pop-up window. It looked a little different on Windows, Mac, and Linux, but the essence was like the image blllow.</p>
 
         <p>Unfortunately, due to Firefox 57+ limitations, we cannot read your FoxyProxy settings automatically. However, they are not lost. To import your old settings, please select the file <i>foxyproxy.xml</i> below. You can find it in the <a href="https://support.mozilla.org/en-US/kb/profiles-where-firefox-stores-user-data#w_how-do-i-find-my-profile" target="_blank">Firefox profile directory</a>.<br><br>
-        <input id="importXml" type="file" accept=".xml"></p>
+        <input type="file" id="importXml" accept=".xml">
+        <label for="importXml" class="button" data-i18n="import"></label>
+        </p>
 
         <p style="text-align: center;"><a target="_blank" href="/images/legacy-version.png"><img src="/images/legacy-version.png" style="width: 300px;"></a><br>
         <i>(click image for larger picture)</i></p>
@@ -49,7 +55,6 @@
 
     </div>
 
-  <script src="scripts/const.js"></script>
   <script src="scripts/utils.js"></script>
   <script src="scripts/import.js"></script>
   </body>
