--- a/src/options.html
+++ b/src/options.html
@@ -6,19 +6,16 @@
     <link rel="icon" type="image/png" href="/images/icon.svg">
     <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
-    <link rel="stylesheet" href="styles/vex-4.1.0.css"/>
-    <link rel="stylesheet" href="styles/vex-theme-default-4.1.0.css"/>
     <style>
       nav { width: 14em; margin-right: 0.5em; }
       nav i { margin-right: 0.4em; font-size: 1.6em !important; }
       nav a { display: block; padding: 0.2em 0.5em; border-radius: 0 50px 50px 0; transition: all 0.5s ease-in-out; }
       nav a:hover { background-color: #ffebcd; }
-      nav a i, nav a i:hover { color: inherit !important; }
       
       select { max-width: 25em; }
-      .rightColumn { padding: 1em; flex-grow: 1; border: 1px solid #ccc; border-radius: 5px; }
-      .pxy { opacity: 1; transition: all 0.5s ease-in-out; 
-          margin: 0 0 1em 0; padding: 0.5em 1em 0 1em; border: 1px solid #ccc; border-radius: 5px; }
+      .rightColumn { padding: 1em; flex-grow: 1;   border: 1px solid #ccc; border-radius: 5px; }
+      .pxy { opacity: 1; transition: all 0.5s ease-in-out; border: 1px solid #ccc; border-radius: 5px;
+          margin: 0 0 1em 0; padding: 0.5em 1em 0 1em; }
       .pxy.on { box-shadow: 0px 3px 6px rgba(0,0,0,0.6); }
       .pxy:first-of-type button.up,
       .pxy:nth-last-child(2) button.down { visibility: hidden; }
@@ -30,9 +27,8 @@
       #accounts button.small { margin-left: 0.2em; }
       .default :not([data-i18n="edit"]) { visibility: hidden; }
       #accounts button i.fa { font-size: 1.8em; }
-      .fa-lock { display: inline-block; color: #080; font-size: 1.3em; vertical-align: middle; margin-right: 0.3em; }
-      .fa-lock.hide { visibility: hidden; } 
-      .scroll { max-height: 40vh; }
+      .fa-lock.on, .fa-lock.on:hover { color: #080; font-size: 1.3em; vertical-align: middle; margin-right: 0.3em; }
+      .scroll { max-height: 40vh; padding-right: 0.2em; }
     </style>
 
   </head>
@@ -69,7 +65,7 @@
           <!-- select & sync -->
           <div class="flex">
             <select id="mode">
-              <option value="patterns" style="color: #f7941e;" data-i18n="modePatterns"></option>
+              <option value="patterns" style="color: #f90;" data-i18n="modePatterns"></option>
               <option value="disabled" style="color: red;" data-i18n="modeDisabled"></option>
             </select>
 
@@ -96,7 +92,7 @@
               <span class="address ellipsis"></span>
             </div>
             <div style="text-align: right;">
-              <i class="fa fa-lock hide"></i>
+              <i class="fa fa-lock"></i>
               <input type="checkbox" name="onOff" class="switch-input" id="">
               <label class="switch-paddle" for="">
                 <span class="switch-active" aria-hidden="true" data-i18n="on"></span>
@@ -113,16 +109,22 @@
 
         </div>
       </div>
-<!--
-      <div style="text-align: right;">
-          <button type="submit" data-i18n="save"></button>
+    </div>
+    
+    <!-- popup -->
+    <div class="popup">
+      <div>
+        <h3></h3>
+        <div></div>
+        <div style="text-align: right;">
+          <button type="button" class="flat" data-i18n="cancel"></button>&nbsp;
+          <button type="button" class="flat" data-i18n="ok"></button>
+        </div>
       </div>
--->
     </div>
 
-  <script src="scripts/const.js"></script>
+
   <script src="scripts/utils.js"></script>
-  <script src="scripts/vex.combined-4.1.0.js"></script>
   <script src="scripts/options.js"></script>
   </body>
 </html>
