--- a/src/pattern-tester.html
+++ b/src/pattern-tester.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles/app.css">
     <style>
       h3 { margin-bottom: 0; }
-      .prime { border: 1px solid #ccc; }
       .prime > h3:first-of-type { margin-top: 0; }
-      p { margin-top: 0; }
       #result { margin: 1em 0 0; }
+      label { display: inline-block; }
+      label + span { color: #f30; font-style: italic; margin-left: 0.5em; font-size: 0.9em; }
     </style>
   </head>
   <body>
@@ -23,48 +23,47 @@
     <div class="prime">
 
       <div style="text-align: right;">
-        <a href="/pattern-help.html" target="_blank">Pattern Help <i class="fa fa-question-circle"></i></a>
+        <a href="/pattern-help.html" target="_blank"><span data-i18n="patternHelp"></span> <i class="fa fa-question-circle"></i></a>
       </div>
 
       <h3>Step 1</h3>
-      <label>Enter URL to test <span style="color:red">(paths and query parameters are ignored)</span></label>
-      <input id="url" type="text" value="https://getfoxyproxy.org">
+      <label data-i18n="enterUrl"></label><span data-i18n="enterUrlNote"></span>
+      <input id="url" type="url" value="https://getfoxyproxy.org/">
 
 
       <h3>Step 2</h3>
-      <p>Enter pattern details.</p>
       <div class="flex">
         <div style="flex: 3;">
-          <label>Pattern <span style="color:red">(no paths, no query parameters)</span></label>
-          <input id="pattern" name="pattern" type="text">   
+          <label data-i18n="patternDetail"></label><span data-i18n="patternNote"></span>
+          <input id="pattern" type="text" spellcheck="false">
         </div>
 
         <div style="margin-left: 1em;">
-          <label>Type</label>
-          <select id="type" name="type">
+          <label data-i18n="type"></label>
+          <select id="type">
             <option value="1">Wildcard</option>
             <option value="2">Reg Exp</option>
           </select>
         </div>
 
         <div style="margin-left: 1em;">
-          <label>Protocols</label>
-          <select id="protocols" name="protocols">
+          <label data-i18n="protocol"></label>
+          <select id="protocols">
             <option value="1">all</option>
             <option value="2">http</option>
             <option value="4">https</option>
           </select>
         </div>
-
       </div>
 
+
       <h3>Step 3</h3>
-      <p>Click 'Test' when ready</p>
+      <label data-i18n="clickTest"></label>
       <div style="text-align: right;"><button type="button" data-i18n="test"></button></div>
-      <p id="result" class="prime small hide"></p>
+      <p id="result" class="prime small success hide"></p>
     </div>
 
-  <script src="scripts/const.js"></script>
+  <script src="scripts/common.js"></script>
   <script src="scripts/utils.js"></script>
   <script src="scripts/pattern-tester.js"></script>
   </body>
