--- a/src/about.html
+++ b/src/about.html
@@ -71,7 +71,7 @@
           <li>Patterns Page</li>
           <li class="sub">New Inline-Editor</li>
           <li class="sub">Patterns are checked and errors dispalyed</li>
-          <li class="sub"></li>
+          <li class="sub">Proxy title & Date is added to the export filename</li>
 
 
           <li>Proxy Page</li>
