--- a/src/log.html
+++ b/src/log.html
@@ -42,6 +42,7 @@
         padding: 0.2em;
         height: auto;
       }
+      button i.fa { color: inherit; font-size: inherit; }
     </style>
   </head>
   <body>
@@ -101,7 +102,7 @@
       <div style="margin-top: 1em; text-align: right;">
         <button type="button" data-i18n="back">&#x25c1; </button>
         <button type="button" data-i18n="refresh"><i class="fa fa-refresh"></i> </button>
-        <button type="button" class="alert" data-i18n="clear"><i class="fa fa-trash" style="color: inherit;"></i> </button>
+        <button type="button" class="alert" data-i18n="clear"><i class="fa fa-trash"></i> </button>
       </div>
 
     </div>
