--- a/src/options.html
+++ b/src/options.html
@@ -27,7 +27,8 @@
       #accounts button.small { margin-left: 0.2em; }
       .default :not([data-i18n="edit"]) { visibility: hidden; }
       #accounts button i.fa { font-size: 1.8em; }
-      .fa-lock.on, .fa-lock.on:hover { color: #080; font-size: 1.3em; vertical-align: middle; margin-right: 0.3em; }
+      .fa-lock { font-size: 1.3em; vertical-align: middle; margin-right: 0.3em; }
+      .fa-lock.on, .fa-lock.on:hover { color: #080; }
       .scroll { max-height: 40vh; padding-right: 0.2em; }
     </style>
 
