--- a/src/pattern-tester.html
+++ b/src/pattern-tester.html
@@ -28,7 +28,7 @@
 
       <h3>Step 1</h3>
       <label data-i18n="enterUrl"></label><span data-i18n="enterUrlNote"></span>
-      <input id="url" type="url" value="https://getfoxyproxy.org/">
+      <input id="url" type="url" value="https://getfoxyproxy.org">
 
 
       <h3>Step 2</h3>
