--- a/src/proxy.html
+++ b/src/proxy.html
@@ -99,7 +99,7 @@
           </div>
   
           <div class="flex onOff notForBasic">
-            <label>Add whitelist pattern to match all URLs</label>
+            <label data-i18n="addWhitelist"></label>
             <div>
               <input name="onOff" class="switch-input" id="onOffWhiteAll" type="checkbox" checked>
               <label class="switch-paddle" for="onOffWhiteAll">
@@ -111,8 +111,8 @@
           </div>
   
           <div class="flex onOff notForBasic">
-            <label>Do not use for localhost and intranet/private IP addresses
-            <span class="has-tip" title="Add blacklist patterns for localhost, 127.0.0.1, 192.168.*.*, 172.16.*.*, and 10.*.*.*">Help</span></label>
+            <label><span data-i18n="noLocal"></span>
+             <span class="has-tip" title="Add blacklist patterns for localhost, 127.0.0.1, 192.168.*.*, 172.16.*.*, and 10.*.*.*" data-i18n="help"></span></label>
   
             <div>
               <input name="onOff" class="switch-input" id="onOffBlackAll" type="checkbox" checked>
