--- a/src/log.html
+++ b/src/log.html
@@ -42,7 +42,7 @@
         padding: 0.2em;
         height: auto;
       }
-      button i.fa { color: inherit; font-size: inherit; }
+      i.fa, i.fa:hover { color: inherit; font-size: inherit; }
     </style>
   </head>
   <body>
