--- a/src/patterns.html
+++ b/src/patterns.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
     <style>
-      /*td i.fa { font-size: 1.5em; }*/
+      td i.fa { font-size: 1.5em; color: #ccc; }
+      td i.fa:hover { font-size: 1.5em; color: #f90; }
       tr { opacity: 1; transition: all 0.5s ease-in-out; }
       td { padding: 0.2em 0.5em; }
       td:nth-of-type(1), td:nth-of-type(2) { min-width: 10em; max-width: 15em; padding: 0 0.5em; }
