--- a/src/options.html
+++ b/src/options.html
@@ -76,7 +76,7 @@
 
             <div style="text-align: right;">
                 <span data-i18n="syncSettings"></span>
-                <button type="button" class="plain has-tip" data-i18n="help|title">?</button>
+                <button type="button" class="plain" data-i18n="help|title"><i class="fa fa-question-circle"></i></button>
                 <input id="syncOnOff" type="checkbox" name="syncOnOff" class="switch-input">
                 <label class="switch-paddle" for="syncOnOff">
                   <span class="show-for-sr" data-i18n="onOff"></span>
