--- a/src/about.html
+++ b/src/about.html
@@ -9,7 +9,7 @@
     <style>
       h3 { border-bottom: 1px solid #ddd; max-width: 20em; }
       h3:not(:first-of-type) { margin-top: 2em; }
-      h4 { margin-bottom: 0.5em; }
+      h4 { margin-bottom: 0; display: inline-block; }
       p, img { margin-left: 1em; }
       i.fa {
         color: #f90;
@@ -100,7 +100,7 @@
         </ul>
 
 
-      <h4>Versions 6.4, 6.5, 6.6, 6.6.1, 6.6.2 (some versions unreleased)</h4>
+      <h4>Versions 6.4, 6.5, 6.6, 6.6.1, 6.6.2</h4> <i>(some versions unreleased)</i>
       <ul>
         <li>Fixed pattern matching bug whereby patterns with leading .* or . did not always accurately match subdomains</li>
         <li>Import/Export patterns to and from files (previously you could only import/export all settings, including patterns)</li>
