--- a/src/patterns.html
+++ b/src/patterns.html
@@ -130,7 +130,7 @@
 
       <div style="margin: 1em 0 2em; text-align: center; font-size: 0.9em;">
         <span data-i18n="addBlacklist"></span>
-        <div class="tooltip" data-i18n="help"><span class="tooltiptext center" data-i18n="addBlacklistTip"></span></div>
+        <div class="tooltip"><i class="fa fa-info-circle"></i><span class="tooltiptext center" data-i18n="addBlacklistTip"></span></div>
         <button type="button" class="small" style="margin-left: 1em; vertical-align: initial;" data-i18n="add"></button>
       </div>
 
