--- a/src/popup.html
+++ b/src/popup.html
@@ -40,7 +40,7 @@
 
 
     <!-- main -->
-    <div id="optionsRow" class="prime hide" style="margin: 0;">
+    <div class="prime" style="margin: 0;">
 
 
         <ul class="scroll">
