--- a/src/about.html
+++ b/src/about.html
@@ -62,13 +62,17 @@
       <h4>Version 7.0</h4>
         <ul>
 
+          <li>Toolbar Popup</li>
+          <li class="sub">"By Pattern" option is removed if there are no patterns set</li>
+
+
           <li>Options Page</li>
           <li class="sub">Option to transfer preferences from <i>local</i> to <i>Sync</i> and vice versa</li>
           <li class="sub">Options page shows <i class="fa fa-lock"></i>for proxies with saved username/password</li>
           <li class="sub">Date is added to the export filename</li>
           <li class="sub">Export auto-renames file if the same name exists</li>
           <li class="sub">Country flag and mouseover information added for proxies imported from FoxyProxy account</li>
-
+          <li class="sub">"By Pattern" option is removed if there are no patterns set</li>
 
           <li>Patterns Page</li>
           <li class="sub">New Inline-Editor</li>
@@ -80,6 +84,8 @@
           <li>Proxy Page</li>
           <li class="sub">Option to set active on|off on proxy Edit page</li>
           <li class="sub">username/password/port are kept when adding new proxies to ease creation of multiple proxies with same username/password</li>
+          <li class="sub">Default Proxy Type is set to HTTPS/SSL</li>
+          <li class="sub">Default no proxy for  localhost and intranet/private IP addresses is set to OFF</li>
 
 
           <li>Import Page</li>
@@ -96,7 +102,7 @@
           <li class="sub">Added size control to Log entries</li>
           <li class="sub">Default is set to log off and size 100 entries</li>
 
-
+          <li>i18n support</li>
           <li>Removed JQuery, Clusterize & Vex Libraries</li>
           <li>Greatly streamlined</li>
           <li>Style/Code Improvement</li>
