--- a/src/options.html
+++ b/src/options.html
@@ -60,7 +60,7 @@
           <a data-i18n="deleteBrowserData"><i class="fa fa-eraser" style="margin-right: 0.1em;"></i></a>
           <a href="https://getfoxyproxy.org/geoip/" target="_blank" data-i18n="myIP"><i class="fa fa-globe"></i></a>
           <a data-i18n="log"><i class="fa fa-file-text"></i></a>
-          <a data-i18n="about"><i class="fa fa-question"></i></a>
+          <a data-i18n="about"><i class="fa fa-info-circle"></i></a>
         </nav>
 
         <div class="rightColumn">
