--- a/src/import.html
+++ b/src/import.html
@@ -40,7 +40,7 @@
     <div class="prime header" data-i18n="import"></div>
 
     <!-- spinner -->
-    <div id="spinner" class="on"><i class="fa fa-refresh fa-spin"></i></div>
+    <div class="spinner on"><i class="fa fa-refresh fa-spin"></i></div>
 
     <!-- main -->
     <div class="prime">
