--- a/src/patterns.html
+++ b/src/patterns.html
@@ -47,7 +47,7 @@
     <div class="prime header" data-i18n="editPatterns"></div>
 
     <!-- spinner --> <!-- options, patterns, log -->
-    <div id="spinner" class="on"><i class="fa fa-refresh fa-spin"></i></div>
+    <div class="spinner on"><i class="fa fa-refresh fa-spin"></i></div>
 
     <!-- error -->
     <div id="error" class="prime hide">
@@ -69,7 +69,7 @@
           <thead>
             <tr>
               <th data-i18n="name"></th><th data-i18n="pattern"></th><th data-i18n="type"></th>
-              <th>HTTP/s</th><th data-i18n="onOff"></th><th data-i18n="edit"></th>
+              <th>HTTP/s</th><th data-i18n="active"></th><th data-i18n="edit"></th>
             </tr>
             <!-- template -->
             <tr class="template">
@@ -89,12 +89,7 @@
                 </select>
               </td>
               <td>
-                <input name="onOff" class="switch-input" id="" type="checkbox" checked>
-                <label class="switch-paddle" for="active">
-                  <span class="show-for-sr">On/Off</span>
-                  <span class="switch-active" aria-hidden="true" data-i18n="on"></span>
-                  <span class="switch-inactive" aria-hidden="true" data-i18n="off"></span>
-                </label>
+                <input type="checkbox" class="switch" id=""><label for=""></label>
               </td>
               <td style="text-align: right;">
                 <button type="button" class="plain hide" data-i18n="imported|title"><i class="fa fa-download"></i></button>
@@ -119,7 +114,7 @@
           <thead>
             <tr>
               <th data-i18n="name"></th><th data-i18n="pattern"></th><th data-i18n="type"></th>
-              <th>HTTP/s</th><th data-i18n="onOff"></th><th data-i18n="edit"></th>
+              <th>HTTP/s</th><th data-i18n="active"></th><th data-i18n="edit"></th>
              </tr>
           </thead>
 
