--- a/src/popup.html
+++ b/src/popup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/app.css">
     <style>
-      body { font-size: 1.2em; padding: 0.4em; animation: none; }
+      body {  padding: 0.4em; animation: none; min-width: 25em; }
       ul.scroll { margin: 0; padding: 0;  max-height: 20em; }
       li { cursor: pointer; border-radius: 10px; padding-left: 0.2em; }
       li:hover { background-color: #ffebcd; }
