--- a/src/options.html
+++ b/src/options.html
@@ -9,7 +9,7 @@
     <style>
       nav { width: 14em; margin-right: 0.5em; }
       nav i.fa { margin-right: 0.4em; font-size: 1.6em; }
-      nav a { display: block; padding: 0.2em 0.5em; border-radius: 0 50px 50px 0;  }
+      nav a { display: block; padding: 0.2em 0.5em; border-radius: 0 50px 50px 0; cursor: pointer;  }
       nav a:hover { background-color: #ffebcd; }
       button i.fa { font-size: 1.8em; color: #ccc; }
       button i.fa:hover { color: #f90; }
@@ -19,14 +19,14 @@
       select { max-width: 25em; }
       .rightColumn { padding: 1em; flex-grow: 1;   border: 1px solid #ccc; border-radius: 5px; }
       .pxy { opacity: 1; transition: all 0.5s ease-in-out; border: 1px solid #ccc; border-radius: 5px;
-          margin: 0 0 1em 0; padding: 0.5em 1em 0 1em; }
+          margin: 0 0 0.5em 0; padding: 0.2em 0.4em; }
       .pxy.on { box-shadow: 0px 3px 6px rgba(0,0,0,0.6); }
       .pxy:first-of-type button.up,
       .pxy:last-of-type button.down { visibility: hidden; }
       #accounts { max-height: 60vh; }
       #accounts div:last-of-type { margin: 0; }
       
-      .title, .address { display: inline-block; }
+      .title, .address { display: inline-block; vertical-align: middle; }
       .title { width: 6em; margin: 0 0.5em; }
       .address { max-width: 10em; }
       #accounts button.small { margin-left: 0.2em; }
@@ -42,7 +42,7 @@
 
 
     <!-- spinner -->
-    <div id="spinner" class="on"><i class="fa fa-refresh fa-spin"></i></div>
+    <div class="spinner on"><i class="fa fa-refresh fa-spin"></i></div>
 
     <!-- error -->
     <div id="error" class="prime hide"><h5 data-i18n="erroNoSettings"></h5></div>
@@ -75,12 +75,7 @@
             <div style="text-align: right;">
                 <span data-i18n="syncSettings"></span>
                 <button type="button" class="plain" data-i18n="help|title"><i class="fa fa-question-circle"></i></button>
-                <input id="syncOnOff" type="checkbox" name="syncOnOff" class="switch-input">
-                <label class="switch-paddle" for="syncOnOff">
-                  <span class="show-for-sr" data-i18n="onOff"></span>
-                  <span class="switch-active" aria-hidden="true" data-i18n="on"></span>
-                  <span class="switch-inactive" aria-hidden="true" data-i18n="off"></span>
-                </label>
+                <input type="checkbox" class="switch" id="syncOnOff"><label for="syncOnOff"></label>
             </div>
           </div>
 
@@ -90,7 +85,7 @@
           <!-- template -->
           <div class="pxy flex template">
             <div>
-              <span class="fp-color-blob"></span>
+              <span class="fp-color-blob">&nbsp;</span>
               <span class="title ellipsis"></span>
               <span class="address ellipsis"></span>
               <span class="flag hide"></span>
@@ -98,12 +93,7 @@
             </div>
             <div style="text-align: right;">
               <i class="fa fa-lock"></i>
-              <input type="checkbox" name="onOff" class="switch-input" id="">
-              <label class="switch-paddle" for="">
-                <span class="switch-active" aria-hidden="true" data-i18n="on"></span>
-                <span class="switch-inactive" aria-hidden="true" data-i18n="off"></span>
-              </label>
-
+              <input type="checkbox" name="onOff" class="switch" id=""><label for=""></label>
               <button type="button" class="small" data-i18n="edit"></button>
               <button type="button" class="small" data-i18n="patterns"></button>
               <button type="button" class="plain" data-i18n="delete|title"><i class="fa fa-trash"></i></button>
