--- a/src/proxy.html
+++ b/src/proxy.html
@@ -9,9 +9,9 @@
     <style>
       .main > div:nth-child(1) { flex: 1;  margin-right: 1em; }
       .main > div:nth-child(2) { flex: 1; }
-      .main label { display: inline-block; }
-
-      .onOff > label { flex: 0; flex-grow: 1; margin-right: 1em; }
+      input[type], select { margin-top: 0.3em; }
+  
+      .onOff > label:first-of-type { flex: 0; flex-grow: 1; margin: 0 1em 0.5em 0; }
       .onOff > div { flex: 0; }
       .na { margin-top: 1.5em; }
       .onOff, .pac, .na { display: none; }
@@ -69,7 +69,7 @@
   
         <!-- left column -->
         <div>
-          <label class="" data-i18n="title"></label>
+          <label data-i18n="title"></label>
           <input id="proxyTitle" type="text" spellcheck="false" placeholder="title">
   
           <label data-i18n="color"></label>
@@ -78,38 +78,23 @@
           <div class="flex onOff">
             <label data-i18n="active"></label>
             <div>
-              <input name="onOff" class="switch-input" id="proxyActive" type="checkbox" checked>
-              <label class="switch-paddle" for="proxyActive">
-                <span class="show-for-sr">On/Off</span>
-                <span class="switch-active" aria-hidden="true" data-i18n="on"></span>
-                <span class="switch-inactive" aria-hidden="true" data-i18n="off"></span>
-              </label>
+              <input type="checkbox" class="switch" id="proxyActive" checked><label for="proxyActive"></label>
             </div>
           </div>
   
           <div class="flex onOff notForBasic">
             <label data-i18n="addWhitelist"></label>
             <div>
-              <input name="onOff" class="switch-input" id="onOffWhiteAll" type="checkbox" checked>
-              <label class="switch-paddle" for="onOffWhiteAll">
-                <span class="show-for-sr">On/Off</span>
-                <span class="switch-active" aria-hidden="true" data-i18n="on"></span>
-                <span class="switch-inactive" aria-hidden="true" data-i18n="off"></span>
-              </label>
+              <input type="checkbox" class="switch" id="whiteAll" checked><label for="whiteAll"></label>
             </div>
           </div>
   
           <div class="flex onOff notForBasic">
             <label><span data-i18n="noLocal"></span>
-             <div class="tooltip"><i class="fa fa-info-circle"></i><span class="tooltiptext" data-i18n="addBlacklistTip"></span></div></label>
+             <div class="tooltip"><i class="fa fa-info-circle" style="font-size: 1.2em;"></i><span class="tooltiptext" data-i18n="addBlacklistTip"></span></div></label>
   
             <div>
-              <input name="onOff" class="switch-input" id="onOffBlackAll" type="checkbox">
-              <label class="switch-paddle" for="onOffBlackAll">
-                <span class="show-for-sr">On/Off</span>
-                <span class="switch-active" aria-hidden="true" data-i18n="on"></span>
-                <span class="switch-inactive" aria-hidden="true" data-i18n="off"></span>
-              </label>
+              <input type="checkbox" class="switch" id="blackAll"><label for="blackAll"></label>
             </div>
           </div>
           
@@ -119,12 +104,7 @@
           <div class="flex onOff dns">
             <label>Send DNS through SOCKS5 proxy</label>
             <div>
-              <input name="proxyDNS" class="switch-input" id="proxyDNS" type="checkbox" checked>
-              <label class="switch-paddle" for="proxyDNS">
-                <span class="show-for-sr">On/Off</span>
-                <span class="switch-active" aria-hidden="true" data-i18n="on"></span>
-                <span class="switch-inactive" aria-hidden="true" data-i18n="off"></span>
-              </label>
+              <input type="checkbox" class="switch" id="proxyDNS" checked><label for="proxyDNS"></label>
             </div>
           </div>
   
