--- a/src/proxy.html
+++ b/src/proxy.html
@@ -44,6 +44,9 @@
         display: none;
       }
 
+      #direct:checked ~ div button[data-i18n="saveEditPattern"] {
+        display: none;
+      }
 
     </style>
   </head>
