--- a/src/options.html
+++ b/src/options.html
@@ -16,7 +16,6 @@
       i.fa-lock { color: #ccc; font-size: 1.3em; vertical-align: middle; margin-right: 0.3em; }
       i.fa.fa-lock.on, i.fa-lock.on:hover { color: #080; }
       
-      select { max-width: 25em; }
       .rightColumn { padding: 1em; flex-grow: 1;   border: 1px solid #ccc; border-radius: 5px; }
       .pxy { opacity: 1; transition: all 0.5s ease-in-out; border: 1px solid #ccc; border-radius: 5px;
           margin: 0 0 0.5em 0; padding: 0.2em 0.4em; }
@@ -32,6 +31,16 @@
       #accounts button.small { margin-left: 0.2em; }
 
       .scroll { max-height: 40vh; padding-right: 0.2em; }
+      
+      .color{
+        width: 2em;
+        display: inline-block;
+        border-radius: 5px;
+        border: 2px solid #fff;
+        box-shadow: 0px 2px 3px #777;
+        font-size: 0.8em;
+        width: 3em;
+      }
     </style>
 
   </head>
@@ -85,7 +94,7 @@
           <!-- template -->
           <div class="pxy flex template">
             <div>
-              <span class="fp-color-blob">&nbsp;</span>
+              <span class="color">&nbsp;</span>
               <span class="title ellipsis"></span>
               <span class="address ellipsis"></span>
               <span class="flag hide"></span>
