--- a/src/options.html
+++ b/src/options.html
@@ -13,6 +13,7 @@
       nav a:hover { background-color: #ffebcd; }
       button i.fa { font-size: 1.8em; color: #ccc; }
       button i.fa:hover { color: #f90; }
+      button[data-i18n="help|title"] { margin-right: 0.5em; }
       i.fa-lock { color: #ccc; font-size: 1.3em; vertical-align: middle; margin-right: 0.3em; }
       i.fa.fa-lock.on, i.fa-lock.on:hover { color: #080; }
       
