--- a/src/proxy.html
+++ b/src/proxy.html
@@ -88,7 +88,7 @@
           <div class="flex onOff notForBasic">
             <label data-i18n="addWhitelist"></label>
             <div>
-              <input type="checkbox" class="switch" id="whiteAll" checked><label for="whiteAll"></label>
+              <input type="checkbox" class="switch" id="whiteAll"><label for="whiteAll"></label>
             </div>
           </div>
   
